feat: update api dashboard
